ImpressCMS ChangeLog

=============================================
2008-01-08 : ImpressCMS 1.0 "Janus" Beta Beta
=============================================

- Added : linkexternal.js to header, allows devs & designers to utilise 'rel="external" or rel="nofollow" in <A > tags as a replacement for target="_blank". (Vaughan)
- Added : New admin interface based on XOOPS EXM and improved. Thanks to XOOPS EXM!. (BitC3R0 / malanciault / young-pee)
- Added : Addition of the XoopsEditors framework with default editor (malanciault)
- Added : Integration of the Easiest Multilanguage originally created by GIJOE (malanciault)
- Added : Addition of Gijoe Remember me hack (malanciault)
- Added : Added a new Database Driver (MySQLi). (young-pee)
- Added : New feature to add/edit/delete blocks positions. (rplima/young-pee)
- Added : New installer (skalpa/wtravel)
- Added : Configuration of XOOPS_TRUST_PATH in intall wizard (malanciault)
- Added : Saving the database information in a file inside trust_path if possible (malanciault)
- Added : Upgrade script from XOOPS 2.0.18 (Vaughan/malanciault)
- Added : Handling HTTP errors automatically on the site. (malanciault/young-pee)
- Added : Creating a random DB prefix in instalation process like mentioned in feature request item #1848819 (real_therplima)
- Added : New default theme : impresstheme created by aphex and snow (malanciault)
- Added : Another theme : impresstheme_light created by nekro (malanciault)
- Added : Ability to set & define your sites Privacy Policy from admin/preferences/user settings. (vaughan)
- Added : New function to show warnings. Also added a new css class for that. xoops_warning() (young-pee)
- Added : 4 new System warnings. 1 for Security and 3 for correct functionality of the system. (young-pee)
- Added : The users can change they personal theme to be display when they change they profile. (young-pee)